# LangChain-Agent

./: CONTRIBUTING.md  LANGCHAIN_UPGRADE_REPORT.md  README.md  app_server.py  chat_with_agent_api.py  generate.py  pyproject.toml  requirements.txt  setup.py  test_smoke_upgrade.py  webui.py
chat/: chat_routes.py
configs/: prompt.py  setting.py
data/test/: 尺码推荐.txt  颜色选择.txt  黑神话悟空.txt
db_server/: base.py  knowledge_base_repository.py
db_server/data/: info.db
knowledgebase_server/: kb_routes.py  kb_routes_local.py
knowledgebase_server/loader/: loader.py
temp/data/72aae997-d76c-4fe2-aefc-8f330608264e/: test.csv
temp/data/aad3328f-4152-4fa9-a45a-823e03727134/: 新建 文本文档.txt
temp/data/d3bd34f4-5629-4736-a214-649435b9fe21/: test.csv
tools/: code_interpreter.py  get_time.py  knowledge_search.py  tools_select.py  weather_check.py  web_search.py
utils/: callback.py  downloader.py  load_docs.py
webui/: chat_with_agent_api.py  knowledgebase_api.py
